overflow fix

--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -1,7 +1,10 @@
 @media only screen and (min-width: 60em) {
     header {
       margin: auto;
+    }
    
+    body {
+      overflow-x: hidden;
     
     
  
